[gd_scene load_steps=2 format=3 uid="uid://7qd14s1twvei"]

[ext_resource type="Script" uid="uid://dqi6krcc2ex7u" path="res://connection_menu.gd" id="1_slcd8"]

[node name="ConnectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -120.0
offset_right = 160.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_slcd8")

[node name="HostButton" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 128.0
offset_right = 152.0
offset_bottom = 160.0
text = "Host"

[node name="JoinButton" type="Button" parent="."]
layout_mode = 0
offset_left = 168.0
offset_top = 128.0
offset_right = 296.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 0
text = "Join"

[node name="IPAddress" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 32.0
offset_right = 296.0
offset_bottom = 64.0
placeholder_text = "IP"

[node name="Nickname" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 80.0
offset_right = 296.0
offset_bottom = 112.0
placeholder_text = "Nickname"
max_length = 16

[node name="ControlsButton" type="Button" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 176.0
offset_right = 296.0
offset_bottom = 208.0
text = "Controls"

[connection signal="button_down" from="HostButton" to="." method="_on_host_button_down"]
[connection signal="button_down" from="JoinButton" to="." method="_on_join_button_down"]
[connection signal="text_changed" from="IPAddress" to="." method="_on_ip_address_text_changed"]
[connection signal="text_changed" from="Nickname" to="." method="_on_nickname_text_changed"]
[connection signal="button_down" from="ControlsButton" to="." method="_on_controls_button_down"]
